# quotesee

./: CMakeLists.txt  ChangeLog.txt  clean.sh  qsdebug.h  quotesee.pro  readme  thanks  ui_qsconfig.h  ui_qsgeneralconfig.h
data_engine/: CMakeLists.txt  plasma-dataengine-quotesee.desktop  quoteseeengine.cpp  quoteseeengine.h  useyql.cpp  useyql.h
plotting/: CMakeLists.txt  kplotaxis.cpp  kplotaxis.h  kplotobject.cpp  kplotobject.h  kplotpoint.cpp  kplotpoint.h  kplotwidget.cpp  kplotwidget.h  plotting.files
src/: CMakeLists.txt  FindQwt5.cmake  axisscale.h  extIcon.svgz  itemBackground.svgz  mrideque.h  mrudeque.h  plasma-applet-quotesee.desktop  plotter.cpp  plotter.h  qsconfig.cpp  qsconfig.h  qsconfig.ui  qsgeneralconfig.cpp  qsgeneralconfig.h  qsgeneralconfig.ui  quote.cpp  quote.h  quotesee.cpp  quotesee.h  ui_qsconfig.h  ui_qsgeneralconfig.h
tests/: testDeque.pro  testdeque.cpp
